## Enable Vitess Reader Pool Support in Misk Hibernate ### Problem Misk's HibernateModule didn't support reader transacters for Vitess, forcing all queries through primary tablets even when reader configs were provided.
### Solution

1. Enable Vitess reader transacter creation - Added
DataSourceType.VITESS_MYSQL to the reader transacter creation logic in
HibernateModule
2. Fix reader SessionFactory routing - Removed incorrect logic that
prevented Vitess from using reader SessionFactory in RealTransacter
  3. Use explicit reader configs from cliens

### How It Works

Vitess routes queries based on database name:
  - database: "@primary" → PRIMARY tablets (read-write)
  - database: "@replica" → REPLICA tablets (read-only)

### Testing
  - Added integration test via DockerVitess
- Verifies replica routing, write prevention, and connection pool
separation

GitOrigin-RevId: 25eead491e4bae532bac45459d225988d0fa779b

--- a/misk-hibernate/src/test/resources/moviestestmodule-common.yaml
+++ b/misk-hibernate/src/test/resources/moviestestmodule-common.yaml
@@ -1,5 +1,14 @@
 vitess_mysql_data_source:
   type: VITESS_MYSQL
+  database: "@primary"
+  username: root
+  password: ""
+  vitess_schema_resource_root: classpath:/vitess/schema
+  generate_hibernate_stats: "true"
+  port: 27003
+vitess_mysql_reader_data_source:
+  type: VITESS_MYSQL
+  database: "@replica"
   username: root
   password: ""
   vitess_schema_resource_root: classpath:/vitess/schema
