Implement TestFixture for okhttp MockWebServer So that MockWebServers can be used in Misk test with reuse injector enabled.
GitOrigin-RevId: 64c4011caeaa5e35c6d1ac3c8d77729bff7d26f9

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -186,6 +186,7 @@ nettyBom = { module = "io.netty:netty-bom", version.ref = "netty" }
 nettyHandler = { module = "io.netty:netty-handler", version.ref = "netty" }
 okHttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okHttp" }
 okHttpMockWebServer = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okHttp" }
+okHttpMockWebServer3 = { module = "com.squareup.okhttp3:mockwebserver3", version.ref = "okHttp" }
 okHttpSse = { module = "com.squareup.okhttp3:okhttp-sse", version.ref = "okHttp" }
 okio = { module = "com.squareup.okio:okio", version.ref = "okio" }
 okioFakefilesystem = { module = "com.squareup.okio:okio-fakefilesystem", version.ref = "okio" }
