--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -74,9 +74,10 @@ jobs:
 
       - name: Publish Test Report
         if: ${{ always() }}
-        uses: mikepenz/action-junit-report@v3
+        uses: mikepenz/action-junit-report@v5
         with:
           check_name: Test Report - ${{ matrix.cmd }}
+          job_name: Test - ${{ matrix.cmd }}
           report_paths: '**/build/test-results/test/TEST-*.xml'
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
