--- a/misk-admin/web/tabs/database/package.json
+++ b/misk-admin/web/tabs/database/package.json
@@ -9,12 +9,12 @@
     "dev-build": "npm run-script dev-lib ",
     "clean": "rm -rf demo lib",
     "clean-build-files": "rm .hash package-lock.json package.json tsconfig.json tslint.json webpack.config.js",
-    "lib": "cross-env NODE_ENV=production webpack",
-    "dev-lib": "cross-env NODE_ENV=development webpack",
+    "lib": "cross-env NODE_ENV=production NODE_OPTIONS=\"--openssl-legacy-provider\" webpack",
+    "dev-lib": "cross-env NODE_ENV=development NODE_OPTIONS=\"--openssl-legacy-provider\" webpack",
     "lint": "prettier --write --config package.json \".{/src/**/,/}*.{md,css,scss,less,json,js,jsx,ts,tsx}\"",
     "prebuild": "miskweb prebuild && npm run-script lint",
     "reinstall": "rm -rf node_modules && npm run-script install",
-    "start": "npm run-script prebuild && cross-env NODE_ENV=development webpack-dev-server",
+    "start": "npm run-script prebuild && cross-env NODE_ENV=development NODE_OPTIONS=\"--openssl-legacy-provider\" webpack-dev-server",
     "test": "jest --passWithNoTests --maxWorkers=2",
     "zip": "tar --exclude='.gitignore' --exclude='.old_build_files' --exclude='package.json' --exclude='package-lock.json' --exclude='prettier.config.js' --exclude='tsconfig.json' --exclude='tslint.json' --exclude='webpack.config.js' --exclude='yarn.lock' --exclude='demo' --exclude='lib' --exclude='.DS_Store' --exclude='*.log' --exclude='node_modules' --exclude='database.tgz' -czvf database.tgz ./"
   },
