--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 awaitility = "4.3.0"
 aws1 = "1.12.791"
 aws2 = "2.37.2"
-bucket4j = "8.8.0"
+bucket4j = "8.16.1"
 datadog = "1.53.0"
 dependencyAnalysisPlugin = "3.0.4"
 detekt = "1.23.8"
@@ -56,10 +56,10 @@ awsSqs = { module = "com.amazonaws:aws-java-sdk-sqs", version.ref = "aws1" }
 bouncyCastlePgp = { module = "org.bouncycastle:bcpg-jdk18on", version = "1.82" }
 bouncyCastlePkix = { module = "org.bouncycastle:bcpkix-jdk18on", version = "1.82" }
 bouncyCastleProvider = { module = "org.bouncycastle:bcprov-jdk18on", version = "1.82" }
-bucket4jCore = { module = "com.bucket4j:bucket4j-core", version.ref = "bucket4j" }
+bucket4jCore = { module = "com.bucket4j:bucket4j_jdk17-core", version.ref = "bucket4j" }
 bucket4jDynamoDbV1 = { module = "com.bucket4j:bucket4j-dynamodb-sdk-v1", version = "8.6.0" }
-bucket4jMySQL = { module = "com.bucket4j:bucket4j-mysql", version.ref = "bucket4j" }
-bucket4jRedis = { module = "com.bucket4j:bucket4j-redis", version.ref = "bucket4j" }
+bucket4jMySQL = { module = "com.bucket4j:bucket4j_jdk17-mysql", version.ref = "bucket4j" }
+bucket4jRedis = { module = "com.bucket4j:bucket4j_jdk17-jedis", version.ref = "bucket4j" }
 caffeine = { module = "com.github.ben-manes.caffeine:caffeine", version = "3.2.2" }
 classGraph = { module = "io.github.classgraph:classgraph", version = "4.8.179" }
 concurrencyLimitsCore = { module = "com.netflix.concurrency-limits:concurrency-limits-core", version = "0.5.3" }
